<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Team11XtremeXpense</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_destionation">AddDestionationActivity</string>
    <string name="title_activity_view_destination">ViewDestinationActivity</string>
    <string name="title_activity_add_claim">AddClaimActivity</string>
    <string name="title_activity_view_claim">ViewClaimActivity</string>
    <string name="title_activity_list_claims">ListClaimsActivity</string>
    <string name="tag_hint">Type the tag here</string>
    <string name="tag_add_button">Add New Tag</string>
    <string name="title_activity_view_tag">TagActivity</string>
    <string name="title_activity_edit_claim">EditClaimActivity</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="account_name">Enter your name below</string>
    <string name="account_back_button">Back</string>
    <string name="account_confirm_button">Confirm</string>
    <string name="account_delete">Clean current user information</string>
    <string name="submit_button">Submit</string>
    <string name="submitted_button">Submitted</string>
    <string name="approve_button">Approve</string>
    <string name="approved_button">Approved</string>
    <string name="return_button">Return</string>
    <string name="returned_button">Returned</string>
    <string name="title_activity_comments">CommentsActivity</string>
    <string name="by_text">By</string>
    <string name="comments_date">Post date:</string>
    <string name="title_activity_add_comments">AddCommentsActivity</string>
    <string name="title_activity_approver_view_claim">ApproverViewClaimActivity</string>
    <string name="add_comments_title">Type your comments below</string>
    <string name="approveClaim_button">Approve current claim</string>
    <string name="returnClaim_button">Return current claim</string>
    <string name="status_lock">Not editable</string>
    <string name="title_activity_view_photo">ViewPhotoActivity</string>
    <string name="available_tags">Available tag list</string>

</resources>
